# natural

./: CLAUDE.md  Makefile  README.md  package-lock.json  package.json
docs/: TASKS.md
docs/plans/: menubar-scroll-toggle.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  scroll.rs
