[package]
name = "natural"
version = "0.1.0"
edition = "2021"

[lib]
name = "natural_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "natural"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
libloading = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
